--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@
 /*see styles.css at root of project for global css*/
 
 .logo {
-  display: block;
+  display: none;
   margin-left: auto;
   margin-right: auto;
 }
